--- a/assets/less/admin/widget/table.widget.less
+++ b/assets/less/admin/widget/table.widget.less
@@ -11,7 +11,7 @@
 		// background: #f2f2f2;
 	}
 	th{
-		background: #fafafa;
+		background: #f9f9f9;
 		border:none;
 		text-align: left;
 		padding:14px 0 14px 0;
