--- a/assets/less/admin/style.less
+++ b/assets/less/admin/style.less
@@ -87,7 +87,7 @@ body{
 			position: relative;
 			display: block;
 			width: 100%;
-			height: 100%;
+			height: 33px;
 			text-decoration: none;
 			a{
 				color: #ddd;
