--- a/assets/less/admin/widget/button.widget.less
+++ b/assets/less/admin/widget/button.widget.less
@@ -18,6 +18,17 @@
 		margin-right:10px;
 	}
 
+
+	&.loading{
+		opacity:0.6!important;
+		cursor: no-drop!important;
+		i{	
+			&:before{
+				content: "\f110";
+			}
+		    animation: fa-spin 2s infinite linear;
+		}
+	}
 	&.danger{
 		border:none;
 		background-color:#ed3f14;
@@ -40,10 +51,16 @@
 		color:#fff;
 	}
 	&:hover{
-		opacity:0.9;
-
+		opacity:0.8;
+		transition: all 0.7s;
+		-moz-transition: all 0.7s;	/* Firefox 4 */
+		-webkit-transition: all 0.7s;	/* Safari 和 Chrome */
+		-o-transition: all 0.7s;	/* Opera */
+		// border:1px solid #2d8cf0;
+		// color:#2d8cf0;
 	}
 	&.blue-o{
+		background-color: transparent;
 		border:1px solid #2d8cf0;
 		color:#2d8cf0;
 	}
