--- a/assets/less/home/style.less
+++ b/assets/less/home/style.less
@@ -4,6 +4,7 @@
 @import './widget/label.widget.less';
 @import './widget/input[checkbox].less';
 @import '../bin/normalize/normalize.less';
+@import '../admin/style/setting.style.less';
 .fl{float: left;}
 .fr{float: right;}
 
